<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_margin="40dp"
    android:background="@color/blue_grey_900"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/blue_50"
            android:gravity="center"
            android:padding="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/colorBackGround"
            android:text="@string/request_track"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:textColorHint="@color/grey_400"
            android:textColor="@color/blue_50"
            android:inputType="text"
            android:id="@+id/dialog_request_artist_name"
            android:hint="@string/enter_artistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:textColorHint="@color/grey_400"
            android:textColor="@color/blue_50"
            android:id="@+id/dialog_request_track_name"
            android:hint="@string/enter_trackName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <Button
                    android:id="@+id/dialog_request_cancel"
                    android:backgroundTint="@color/blue_grey_800"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:text="@string/"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/dialog_request_send_email"
                    android:backgroundTint="@color/blue_grey_800"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:text="@string/send_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
</LinearLayout>