<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="clickHandler"
            type="com.tokastudio.music_offline.view.fragment.HomeFragment.ClickHandler" />
    </data>
        <LinearLayout
            android:paddingBottom="50dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/colorBackGround"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/home_launcher"
                android:layout_width="172dp"
                android:layout_height="172dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/ic_launcher"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/white2" />

            <RelativeLayout
                android:onClick="@{clickHandler::allTracks}"
                android:id="@+id/home_musics"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:background="@drawable/rounding_style_simple"
                android:layout_width="280dp"
                android:layout_height="60dp">
                <ImageView
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_queue_music"
                    android:contentDescription="@string/musics"
                    android:layout_width="36dp"
                    android:layout_height="36dp">
                </ImageView>
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:textSize="20sp"
                    android:textColor="@color/white2"
                    android:text="@string/musics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </RelativeLayout>

            <RelativeLayout
                android:onClick="@{clickHandler::offlineMusics}"
                android:id="@+id/offline_musics"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:background="@drawable/rounding_style_simple"
                android:layout_width="280dp"
                android:layout_height="60dp">
                <ImageView
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_queue_music"
                    android:contentDescription="@string/musics"
                    android:layout_width="36dp"
                    android:layout_height="36dp">
                </ImageView>
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:textSize="20sp"
                    android:textColor="@color/white2"
                    android:text="@string/offline_musics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </RelativeLayout>

            <RelativeLayout
                android:onClick="@{clickHandler::favorites}"
                android:id="@+id/home_favorite"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:background="@drawable/rounding_style_simple"
                android:layout_width="280dp"
                android:layout_height="60dp">
                <ImageView
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_favorite_on"
                    android:contentDescription="@string/favorites"
                    android:layout_width="36dp"
                    android:layout_height="36dp">
                </ImageView>
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:textSize="22sp"
                    android:textColor="@color/white2"
                    android:text="@string/favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </RelativeLayout>
            <FrameLayout
                android:id="@+id/frameLayout_ad_home"
                android:layout_width="280dp"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:onClick="@{clickHandler::otherApps}"
                android:id="@+id/home_other_apps"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:background="@drawable/rounding_style_simple"
                android:layout_width="280dp"
                android:layout_height="60dp">
                <ImageView
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_apps"
                    android:contentDescription="@string/other_apps"
                    android:layout_width="36dp"
                    android:layout_height="36dp">
                </ImageView>
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:textSize="22sp"
                    android:textColor="@color/white2"
                    android:text="@string/other_apps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </RelativeLayout>
            <RelativeLayout
                android:visibility="gone"
                android:onClick="@{clickHandler::requestTrack}"
                android:id="@+id/home_request_track"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:background="@drawable/rounding_style_simple"
                android:layout_width="280dp"
                android:layout_height="60dp">
                <ImageView
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_music_note"
                    android:contentDescription="@string/request_track"
                    android:layout_width="36dp"
                    android:layout_height="36dp">
                </ImageView>
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:textSize="22sp"
                    android:textColor="@color/white2"
                    android:text="@string/request_track"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </RelativeLayout>
        </LinearLayout>
</layout>
