<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="playingTrack"
            type="com.tokastudio.music_offline.model.Song" />
        <variable
            name="clickHandler"
            type="com.tokastudio.music_offline.ui.fragment.TrackListFragment.OnClickHandler" />
    </data>

<RelativeLayout
    android:background="@color/colorBackGround"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.TrackListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_above="@+id/trackList_controlPanel"
        android:id="@+id/track_list_recyclerView"
        tools:listitem="@layout/track_list_item_simple"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.recyclerview.widget.RecyclerView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true"
        android:onClick="@{clickHandler::onControlPanel}"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/trackList_controlPanel"
        android:layout_width="match_parent"
        android:layout_height="74dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/playing_track_cover"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:layout_marginEnd="4dp"
            app:civ_border_color="@color/colorShadow"
            app:civ_border_width="2dp"
            tools:src="@drawable/ic_launcher"
            android:contentDescription="@string/track_cover"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/playing_track_cover"
            app:layout_constraintHorizontal_bias="0.100"
            app:layout_constraintEnd_toStartOf="@+id/music_note"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.500">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{playingTrack.title,default=Title}"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/subTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{playingTrack.artistName,default=Artist}"
                android:textColor="@android:color/darker_gray"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/music_note"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_equalizer"
            android:contentDescription="@string/equalizer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.500" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textSize="23sp"
        android:textColor="@color/colorShadow"
        android:text="@string/empty_list"
        android:id="@+id/empty_list"
        android:paddingBottom="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
</RelativeLayout>
</layout>
