<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="track"
            type="com.tokastudio.music_offline.model.Track" />
        <variable
            name="clickHandler"
            type="com.tokastudio.music_offline.ui.fragment.PlayingTrackFragment.ClickHandler" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    android:clickable="true"
    android:focusable="true">
<!--    android:theme="@style/AppTheme.AppBarOverlay"-->
    <com.google.android.material.appbar.AppBarLayout
        app:elevation="0dp"
        android:background="?attr/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<!--        style="@style/AppTheme.PopupOverlay"-->
<!--        app:menu="@menu/tracks_menu"-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:navigationIcon="@drawable/ic_round_keyboard_arrow_down_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:paddingHorizontal="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <TextView
            android:id="@+id/track_title"
            android:gravity="center"
            tools:text="@string/track_name"
            android:text="@{track.title}"
            android:maxLines="2"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/artist_name"
            android:gravity="center"
            tools:text="@string/artist_name"
            android:text="@{track.title}"
            android:maxLines="1"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

<!--            <RelativeLayout-->
<!--                 android:layout_width="match_parent"-->
<!--                 android:layout_height="wrap_content">-->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewOFTrackCover"
                    app:cardCornerRadius="30dp"
                    android:layout_margin="5dp"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/track_cover"
                        tools:src="@drawable/music_icon_placeholder"
                        android:scaleType="fitXY"
                        android:layout_width="200dp"
                        android:layout_height="200dp" />
                </androidx.cardview.widget.CardView>

<!--                 <ScrollView-->
<!--                android:visibility="invisible"-->
<!--                android:id="@+id/lyric_layout"-->
<!--                android:layout_margin="5dp"-->
<!--                android:background="@drawable/lyric_style"-->
<!--                android:layout_width="@dimen/track_cover_large_width"-->
<!--                android:layout_height="wrap_content">-->
<!--                <TextView-->
<!--                    android:textColor="@color/white1"-->
<!--                    android:padding="10dp"-->
<!--                    android:textSize="18sp"-->
<!--                    android:text="@{track.lyric, default= lyric}"-->
<!--                    android:textAlignment="center"-->
<!--                    android:id="@+id/track_lyric"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:gravity="center_horizontal"-->
<!--                    android:layout_marginBottom="10dp">-->
<!--                </TextView>-->
<!--            </ScrollView>-->

<!--                 <TextView-->
<!--                     android:id="@+id/show_hide_lyric"-->
<!--                     android:visibility="invisible"-->
<!--                     android:clickable="true"-->
<!--                     android:focusable="true"-->
<!--                     android:layout_marginEnd="5dp"-->
<!--                     android:paddingVertical="4dp"-->
<!--                     android:paddingHorizontal="8dp"-->
<!--                     android:layout_marginBottom="5dp"-->
<!--                     android:onClick="@{clickHandler::showLyricBtn}"-->
<!--                     android:background="@drawable/rounding_style_border"-->
<!--                     android:textColor="@color/white1"-->
<!--                     android:layout_alignParentBottom="true"-->
<!--                     android:layout_alignParentEnd="true"-->
<!--                     android:text="@string/show_lyric"-->
<!--                     android:layout_width="wrap_content"-->
<!--                     android:layout_height="wrap_content">-->
<!--                 </TextView>-->
<!--        </RelativeLayout>-->

    </LinearLayout>

    <FrameLayout
        android:layout_margin="4dp"
        android:id="@+id/frameLayout_ad_trackPlaying"
        android:paddingHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:paddingHorizontal="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<!--        <ImageButton-->
<!--            android:id="@+id/track_favorite"-->
<!--            android:src="@drawable/ic_favorite"-->
<!--            android:tint="@color/white1"-->
<!--            android:onClick="@{clickHandler::favBtn}"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"/>-->

        <ImageButton
            android:id="@+id/track_favorite"
            android:src="@drawable/ic_favorite"
            android:tint="?attr/colorOnPrimary"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackground"
            android:padding="5dp"
            android:onClick="@{clickHandler::favBtn}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_marginVertical="10dp"
                android:id="@+id/seekBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <SeekBar
                    android:id="@+id/seekBar"
                    android:progressBackgroundTint="?attr/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:text="@string/zero_time"
                    android:id="@+id/startTime"
                    android:layout_below="@+id/seekBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="15dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?attr/colorOnPrimary" />

                <TextView
                    android:id="@+id/endTime"
                    android:layout_below="@+id/seekBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="15dp"
                    android:text="@string/zero_time"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?attr/colorOnPrimary" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/controlPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seekBarLayout"
                android:layout_centerVertical="true"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="15dp">

                <ImageButton
                    android:id="@+id/playPauseButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/fav_background"
                    android:backgroundTint="?attr/colorAccent"
                    android:src="@drawable/ic_play"
                    android:tint="@color/grey_100"
                    android:onClick="@{clickHandler::playPauseBtn}" />

                <ImageButton
                    android:id="@+id/previousButton"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_skip_previous"
                    android:tint="?attr/colorOnPrimary"
                    android:padding="@dimen/track_controller_item_padding"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="@{clickHandler::previousBtn}"
                    android:layout_toStartOf="@id/playPauseButton"
                    android:layout_marginEnd="20dp" />

                <ImageButton
                    android:id="@+id/nextButton"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_skip_next"
                    android:tint="?attr/colorOnPrimary"
                    android:padding="@dimen/track_controller_item_padding"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="@{clickHandler::nextBtn}"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@id/playPauseButton" />

                <ImageButton
                    android:id="@+id/repeatButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_repeat_off"
                    android:tint="?attr/colorOnPrimary"
                    android:padding="@dimen/track_controller_item_padding"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="@{clickHandler::repeatBtn}"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@id/nextButton" />

                <ImageButton
                    android:id="@+id/shuffleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_shuffle_off"
                    android:tint="?attr/colorOnPrimary"
                    android:padding="@dimen/track_controller_item_padding"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="@{clickHandler::shuffleBtn}"
                    android:layout_marginEnd="20dp"
                    android:layout_toStartOf="@id/previousButton" />

            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
</layout>